--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
+  //padding: 0 2.5rem 1.25rem 2.5rem;
 }
 
 *,
