--- a/src/routes/navigation/navigation.styles.scss
+++ b/src/routes/navigation/navigation.styles.scss
@@ -3,12 +3,18 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
+  padding: 0 2.5rem;
   margin-bottom: 1.5rem;
+  position: fixed;
+  z-index: 10;
+  background-color: white;
 
   & .logo-container {
     height: 100%;
     width: 4.5rem;
-    padding: 1.5rem; 
+    padding: 1rem; 
+    display: flex;
+    justify-content: center;
   }
   
   & .nav-links-container {
@@ -23,4 +29,8 @@
       cursor: pointer;
     }  
   }
+}
+
+.main-content {
+  padding: 6rem 2.5rem 0 2.5rem;
 }
